# pybind11-qt-foo

./: .gitignore  CMakeLists.txt  conanfile.py  makefile  readme.org
binding/glue/: CMakeLists.txt  main.cpp
binding/test/: test.py
src/: foo.cpp  foo.h  moc_foo.cpp  moc_predefs.h  src.pro
test/: test  test.cpp  test.pro
